--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ jwt = "0.16.0"
 hmac = "0.12.1"
 sha2 = "0.10.8"
 validator = { version = "0.17.0", features = ["derive"] }
-figment = { version = "0.10.14", features = ["json", "env"] }
+figment = { version = "0.10.14", features = ["json", "env", "toml"] }
 serde = { version = "1.0.197", features = ["derive"] }
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
 num-traits = "0.2.18"
@@ -25,6 +25,8 @@ chrono = "0.4.35"
 bitflags = "2.4.2"
 serde_json = "1.0.114"
 sqlx-core = "0.7.4"
+clap = { version = "4.5.2", features = ["derive"] }
+pretty_env_logger = "0.5.0"
 
 [build-dependencies]
 tonic-build = "0.11.0"
