--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ num-derive = "0.4.2"
 chrono = "0.4.35"
 bitflags = "2.4.2"
 serde_json = "1.0.114"
-sqlx-core = "0.7.4"
 clap = { version = "4.5.2", features = ["derive"] }
 pretty_env_logger = "0.5.0"
+sea-query = { version = "0.30.7", features = ["with-chrono"] }
 
 [build-dependencies]
 tonic-build = "0.11.0"
