--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0.114"
 clap = { version = "4.5.2", features = ["derive"] }
 pretty_env_logger = "0.5.0"
 sea-query = { version = "0.30.7", features = ["with-chrono"] }
+khash = "2.0.4"
 
 [build-dependencies]
 tonic-build = "0.11.0"
