--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: 26.0
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
