--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ clap = { version = "4.5.2", features = ["derive"] }
 pretty_env_logger = "0.5.0"
 sea-query = { version = "0.30.7", features = ["with-chrono"] }
 khash = "2.0.4"
+reqwest = { version = "0.12.2", features = ["rustls-tls"] }
+regex = "1.10.4"
 
 [build-dependencies]
 tonic-build = "0.11.0"
